chore(requirements): Update requirements.txt

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,18 +13,7 @@ package_dir=
     =src
 packages=find:
 include_package_data = True
-install_requires =
-  prettytable
-  humanize
-  confuse
-  pyyaml
-  urllib3
-# proxmoxer depdends  
-  proxmoxer>=2.0.0
-  requests
-  requests_toolbelt
-  openssh_wrapper
-  paramiko
+install_requires = file: requirements.txt
 
 [options.packages.find]
 where=src
