feat(semantic-release): Add semantic-release configuration
This include semantic-release gh action to build a new release when push
to main branch

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,11 @@
 [metadata]
 name = pvecontrol
-version = 0.0.1
+version = attr: setup.py:__version__
 author = Laurent Corbes
 author_email = laurent.corbes@enix.fr
 description = Proxmox VE control
 long_description = file: README.md
+long_description_content_type='text/markdown'
 licence = GPLv3
 
 [options]
