chore(setup): Change description

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ author = Laurent Corbes
 author_email = laurent.corbes@enix.fr
 description = Proxmox VE control
 long_description = file: README.md
-long_description_content_type = "text/markdown"
+long_description_content_type = text/markdown
 licence = GPLv3
 
 [options]
