fix(config): Rollback node_factors to node

--- a/src/pvecontrol/config_default.yaml
+++ b/src/pvecontrol/config_default.yaml
@@ -6,6 +6,6 @@ clusters:
     user: pvecontrol@pve
     password: somerandomsecret
 
-node_factors:
+node:
   cpufactor: 2.5
   memoryminimum: 81928589934592
