feat: Add completion generation

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-  prettytable
-  humanize
-  confuse
-  pyyaml
-  urllib3
-# proxmoxer depdends  
-  proxmoxer>=2.0.1
-  requests
-  requests_toolbelt
-  openssh_wrapper
-  paramiko
+prettytable
+humanize
+confuse
+pyyaml
+urllib3
+shtab
+
+# proxmoxer depdends
+proxmoxer>=2.0.1
+requests
+requests_toolbelt
+openssh_wrapper
+paramiko
