--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,4 +44,25 @@ jobs:
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
     - name: Run pylint
-      run: python -m pylint src/
+      run: python -m pylint src/ tests/
+
+  # Run tests
+  code:
+    runs-on: ubuntu-latest
+    concurrency: tests
+
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.10'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt -r requirements-dev.txt
+    - name: Run pytest
+      run: python -m pytest
