--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install black
+        pip install -r requirements-dev.txt
     - name: Run black
       run: python -m black . --check
 
@@ -42,6 +42,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pylint
+        pip install -r requirements-dev.txt
     - name: Run pylint
       run: python -m pylint src/
