--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,7 +44,7 @@ jobs:
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
     - name: Run pylint
-      run: python -m pylint src/ tests/
+      run: python -m pylint src/
 
   # Run tests
   code:
