refactor(cli): split subcommands between name and verb and use click instead of argparse
Co-authored-by: Yoann Lamouroux <yoann.lamouroux@enix.fr>

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@ confuse
 pyyaml
 urllib3
 shtab
+click
 
-# proxmoxer depdends
+# proxmoxer depends on
 proxmoxer>=2.0.1
 requests
 requests_toolbelt
