--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements-dev.txt
     - name: Run black
-      run: python -m black . --check
+      run: python -m black . --check --diff
 
   # Run tests for lint
   pylint:
