--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,8 +39,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
+        pip install -r requirements.txt -r requirements-dev.txt
     - name: Run pylint
       run: python -m pylint src/
 
@@ -60,6 +59,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt -r requirements-dev.txt
+        pip install . -r requirements.txt -r requirements-dev.txt
     - name: Run pytest
       run: python -m pytest
