--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,12 @@
-name: Run tests
+# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-on: [pull_request]
+name: Tests
+
+on: 
+  push:
+    branches: [ "main" ]
+  pull_request:
 
 jobs:
   # Run tests for code formating
@@ -47,18 +53,22 @@ jobs:
   code:
     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
 
-    - name: Set up Python
-      uses: actions/setup-python@v3
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.10'
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install . -r requirements.txt -r requirements-dev.txt
-    - name: Run pytest
-      run: python -m pytest
+    - name: Test with pytest
+      run: |
+        pytest
